--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^5.12.6",
     "axios": "^1.6.3",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-contextmenu": "^2.14.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3"
